modal z-index fix

--- a/src/components/addResourceModal/addResourceModalComponent.css
+++ b/src/components/addResourceModal/addResourceModalComponent.css
@@ -1,9 +1,3 @@
-input,
-button,
-textarea {
-  margin-top: 0.6em;
-}
-
 .resource-modal-header {
   width: 100%;
   text-align: start;
