--- a/src/components/modal/modalComponent.css
+++ b/src/components/modal/modalComponent.css
@@ -9,7 +9,7 @@
   border-radius: 2em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: #ffffff;
-  z-index: 999;
+  z-index: 1000;
 }
 
 .modal-header-container {
